--- a/src/app/dialogs/update-profile-dialog/update-profile-dialog.component.html
+++ b/src/app/dialogs/update-profile-dialog/update-profile-dialog.component.html
@@ -16,7 +16,7 @@
     </mat-form-field>
 </div> -->
 
-<mat-vertical-stepper linear #stepper>
+<mat-vertical-stepper linear #stepper [ngClass]="{'animate__animated animate__fadeOutLeft': addClass}">
     <mat-step [stepControl]="firstFormGroup" [editable]="isEditable">
         <form [formGroup]="firstFormGroup">
             <ng-template matStepLabel>Fill out your basic details</ng-template>
@@ -29,7 +29,7 @@
                 <input matInput formControlName="dob" [min]="minDate" [max]="maxDate" [matDatepicker]="picker">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>
+            </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Gender</mat-label>
                 <mat-select formControlName="gender">
@@ -87,7 +87,32 @@
         <p>Click on Submit to proceed.</p>
         <div>
             <button mat-button (click)="stepper.reset()">Reset</button>
-            <button mat-button>Submit</button>
+            <button mat-button (click)="onSubmit()">Submit</button>
         </div>
     </mat-step>
 </mat-vertical-stepper>
+
+<button type="submit" (click)="onSubmit()">Submit</button>
+
+
+
+<div *ngIf="addClass" class="profile-picture-box animate__animated animate__fadeInRight">
+    <div class="dp"></div>
+    <div class="profile-details">
+        <h2>Joy Singh</h2>
+        <p>avnishmamta060606@gmail.com</p>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <div class="files-form">
+        <div [formGroup]="fileFormGroup">
+            <mat-form-field appearance="outline">
+                <mat-label>Outline form field</mat-label>
+                <input matInput placeholder="Placeholder">
+                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                <mat-hint>Hint</mat-hint>
+            </mat-form-field>
+        </div>
+    </div>
+</div>
