--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,7 +69,7 @@
     [fullScreen]="true">
 </ngx-spinner> -->
 
-<ngx-spinner [name]="emailLoader" *ngIf="authUserData" bdColor="rgb(20, 126, 251)" size="large" color="#fff"
+<!-- <ngx-spinner [name]="emailLoader" *ngIf="authUserData" bdColor="rgb(20, 126, 251)" size="large" color="#fff"
     type="ball-atom" [fullScreen]="true">
     <p class="verify-text"><a style="color: #fff;" href="https://gmail.com" target="_blank">We have sent you a mail for
             email verification on
@@ -79,4 +79,4 @@
     <p class="verify-text2">We are waiting for you, while you can go verify you email</p>
 
     <button class="resend-btn" (click)="resendVerification()" mat-button>Resend</button>
-</ngx-spinner>
+</ngx-spinner> -->
