--- a/src/app/components/user-home/user-home.component.html
+++ b/src/app/components/user-home/user-home.component.html
@@ -47,9 +47,43 @@
 
         </div>
 
+        <div *ngIf="apts.length === 0 && !appointmentLoading" class="no-appointments-msg">You haven't booked any
+            appointment yet</div>
+
+        <div *ngIf="appointmentLoading" class="inner-exp-container">
+            <div class="inner-exp-content">
+                <skeleton-loader Cwidth="150px" Cheight="20px"></skeleton-loader>
+                <skeleton-loader Cwidth="200px" Cheight="14px"></skeleton-loader>
+            </div>
+
+            <div class="inner-exp-content-end">
+                <!-- <div class="date-time-mob" *ngIf="breakpointFlag">
+                    <mat-icon>access_time</mat-icon> {{parseDate(a.time)}}
+                </div> -->
+
+                <skeleton-loader Cwidth="250px" Cheight="20px"></skeleton-loader>
+            </div>
+        </div>
+
+        <div *ngIf="appointmentLoading" class="inner-exp-container">
+            <div class="inner-exp-content">
+                <skeleton-loader Cwidth="150px" Cheight="20px"></skeleton-loader>
+                <skeleton-loader Cwidth="200px" Cheight="14px"></skeleton-loader>
+            </div>
+
+            <div class="inner-exp-content-end">
+                <!-- <div class="date-time-mob" *ngIf="breakpointFlag">
+                    <mat-icon>access_time</mat-icon> {{parseDate(a.time)}}
+                </div> -->
+
+                <skeleton-loader Cwidth="250px" Cheight="20px"></skeleton-loader>
+            </div>
+        </div>
+
+
         <div class="inner-exp-container" *ngFor="let a of apts; let i=index">
             <div class="inner-exp-content">
-                <div class="dr-name">{{a.doctorName}} <span>({{a.specializations}})</span></div>
+                <div class="dr-name">{{a.doctorData.name}} <span>({{a.doctorData.specializations}})</span></div>
                 <div class="dr-prob">{{a.problem}}</div>
             </div>
 
@@ -91,7 +125,7 @@
 
 
     <div class="doc-title">Recommended Doctors</div>
-    <div class="doctors-container">
+    <div class="doctors-container" *ngIf="!doctorsLoading">
         <mat-card class="example-card" *ngFor="let d of doctors; let i=index">
             <div class="top-card-content">
                 <mat-card-header>
@@ -108,9 +142,15 @@
                 </mat-card-content>
             </div>
             <mat-card-actions>
-                <button mat-button>Book Appointment</button>
+                <button (click)="onDoctorSelect(d)" mat-button>Book Appointment</button>
             </mat-card-actions>
         </mat-card>
+    </div>
+
+    <div *ngIf="doctorsLoading" class="doctors-container" id="DoctorLoading">
+        <skeleton-loader Cwidth="252px" Cheight="322px"></skeleton-loader>
+        <skeleton-loader Cwidth="252px" Cheight="322px"></skeleton-loader>
+        <skeleton-loader Cwidth="252px" Cheight="322px"></skeleton-loader>
     </div>
 
 
@@ -322,15 +362,17 @@
     </mat-expansion-panel>
 </div>
 
-<ngx-spinner [name]="emailLoader" bdColor="rgb(20, 126, 251)" size="large" color="#fff" type="ball-atom" [fullScreen]="true">
-    <p class="verify-text"><a style="color: #fff;" href="https://gmail.com" target="_blank">We have sent you a mail for email verification on
+<!-- <ngx-spinner [name]="emailLoader" bdColor="rgb(20, 126, 251)" size="large" color="#fff" type="ball-atom"
+    [fullScreen]="true">
+    <p class="verify-text"><a style="color: #fff;" href="https://gmail.com" target="_blank">We have sent you a mail for
+            email verification on
             email address : {{email}} <mat-icon>open_in_new</mat-icon></a></p>
     <p class="or-txt">Or</p>
     <p class="sign-out" (click)="onSignOut()">Sign Out</p>
     <p class="verify-text2">We are waiting for you, while you can go verify you email</p>
 
     <button class="resend-btn" (click)="resendVerification()" mat-button>Resend</button>
-</ngx-spinner>
+</ngx-spinner> -->
 
 <div class="msg-btn" style="cursor: pointer;" (click)="onChatOpen()" *ngIf="!openChatFlag">
     <ng-lottie [options]="options" width="100px" height="100px" [styles]="styles"
