--- a/src/app/dialogs/show-doctor/show-doctor.component.css
+++ b/src/app/dialogs/show-doctor/show-doctor.component.css
@@ -21,6 +21,23 @@ mat-list-item p {
     box-shadow: none !important;
 }
 
+mat-tab-group::-webkit-scrollbar {
+    position            : relative;
+    background          : rgb(255, 255, 255);
+    height              : 8px;
+    border-radius       : 4px;
+    top                 : 0;
+    z-index             : 2;
+    cursor              : pointer;
+    opacity: 1;
+    transition: opacity 0.25s linear;
+}
+
+mat-tab-group::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.062);
+    border-radius: 10px;
+}
+
 .review-box{
     width: 100%;
     display: flex;
@@ -35,3 +52,13 @@ mat-list-item p {
     justify-content: flex-start;
     align-items: center;
 } */
+
+.button-sample {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 20px;
+    justify-content: flex-start;
+    align-items: center;
+    flex: 1 0 30%;
+    margin: 16px 0;
+}
