--- a/src/app/components/book-appointment/book-appointment.component.html
+++ b/src/app/components/book-appointment/book-appointment.component.html
@@ -24,7 +24,7 @@
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Select a date</mat-label>
                         <input matInput id="date" [min]="minDate" [matDatepickerFilter]="myFilter"
-                            formControlName="date" [max]="maxDate" [matDatepicker]="picker">
+                            formControlName="time" [max]="maxDate" [matDatepicker]="picker">
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
@@ -37,22 +37,31 @@
                         </mat-button-toggle>
                     </mat-button-toggle-group>
 
-                    <mat-form-field class="mg-t" appearance="outline" style="width: 100%;">
-                        <mat-label>Textarea</mat-label>
-                        <textarea matInput></textarea>
+                    <mat-form-field class="mg-t" appearance="outline">
+                        <mat-label>Select Slot</mat-label>
+                        <mat-select required formControlName="selectedTimeSlot">
+                            <mat-option *ngFor="let s of data.schedule.slots; let i = index" value="{{i}}">
+                                {{s.start.toDate() | date}} - {{s.end.toDate() | date}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Problem in Brief</mat-label>
+                        <textarea matInput formControlName="problem" required></textarea>
                     </mat-form-field>
 
                     <div class="button-sample">
-                        <button [igxButtonColor]="btnSelect == 'online' ? '#fff' : '#147EFB'"
-                            (click)="btnSelect = 'online'"
+                        <button [igxButtonColor]="btnSelect == 'online' ? '#fff' : '#147EFB'" type="button"
+                            (click)="onTypeChange('online')"
                             [igxButtonBackground]="btnSelect == 'online' ? '#147EFB' : 'transparent'"
                             [igxButton]="btnSelect == 'online' ? 'raised' : 'outlined'" igxRipple="white">
                             Online
                         </button>
-                        <button [igxButtonColor]="btnSelect == 'Offline' ? '#fff' : '#147EFB'"
-                            (click)="btnSelect = 'Offline'"
-                            [igxButtonBackground]="btnSelect == 'Offline' ? '#147EFB' : 'transparent'"
-                            [igxButton]="btnSelect == 'Offline' ? 'raised' : 'outlined'" igxRipple="white">
+                        <button [igxButtonColor]="btnSelect == 'offline' ? '#fff' : '#147EFB'" type="button"
+                            (click)="onTypeChange('offline')"
+                            [igxButtonBackground]="btnSelect == 'offline' ? '#147EFB' : 'transparent'"
+                            [igxButton]="btnSelect == 'offline' ? 'raised' : 'outlined'" igxRipple="white">
                             Offline
                         </button>
                     </div>
@@ -65,6 +74,6 @@
         </div>
     </div>
     <div class="btn-container">
-        <button type="submit" (click)="onSubmit()" mat-button class="confirm-btn">Confirm Booking</button>
+        <button type="submit" (click)="onSubmit()" [disabled]="!appointmentForm.valid" mat-button class="confirm-btn">Confirm Booking</button>
     </div>
 </div>
